--- a/lerna.json
+++ b/lerna.json
@@ -11,11 +11,10 @@
     "publish": {
       "npmClient": "npm",
       "allowBranch": [
-        "master",
-        "canary"
+        "custom"
       ],
       "registry": "https://registry.npmjs.org/"
     }
   },
-  "version": "9.0.8-canary.4"
+  "version": null
 }
