--- a/packages/next-mdx/package.json
+++ b/packages/next-mdx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@next/mdx",
-  "version": "9.0.8-canary.4",
+  "version": null,
   "main": "index.js",
   "license": "MIT",
   "repository": {
